--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "clsx": "^2.1.1",
     "firebase": "^10.12.0",
     "framer-motion": "^12.23.12",
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
+    "tesseract.js": "^6.0.1",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/adm-zip": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
